--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -7,7 +7,30 @@
     "Address":"Ловеч 5500, бул. “Освобождение” №3",
     "WorkingDays":"Понеделник - Петък",
     "WorkingHours":"9:30 до 17:30",
-    "ForMe":"Здравейте! Аз съм Айчин Мехмедов, детайлър с над 5 години опит в бранша. С гордост мога да споделя, че съм официално акредитиран от световноизвестната марка Gtechniq чрез нейния представител за България – Кушев детайлинг. Преминал съм и през редица курсове и обучения от най-добрите в бранша през годините.За мен професионализмът не е просто дума, а ангажимент, който изпълнявам до последния детайл.\n\nЦеня доверието на своите клиенти и се стремя да предложа услуги с най-високо качество, където всеки аспект е важен. Подхождам към всяко превозно средство с отговорност и грижа, като гарантирам, че докато е при мен, то е на сигурно и надеждно място. Убедени можете да бъдете, че във всеки етап на работа, от почистването до най-фините завършващи щрихи, влагам усилия и искреност. Моята цел е не просто да предоставя услуга, а да изградя доверие, базирано на честност и отдаденост.\n\nДетайлингът не само подобрява външния вид на автомобила, но също така допринася за запазването на неговата стойност и дълготрайността му. Чистото и добре поддържано превозно средство е важно не само за комфорта, но и за здравето на своите собственици. \n\nЗа мен най-голямата награда е доволният клиент – усмивката му ми показва, че съм постигнал най-важното.",
+    "ForMeIntro":"Здравейте! Аз съм Айчин Мехмедов, детайлър с над 5 години опит в бранша. С гордост мога да споделя, че съм официално акредитиран от световноизвестната марка Gtechniq чрез нейния представител за България – Кушев детайлинг.",
+    "ForMeExperience":"Преминал съм и през редица курсове и обучения от най-добрите в бранша през годините. За мен професионализмът не е просто дума, а ангажимент, който изпълнявам до последния детайл.",
+    "ForMeTrust":"Ценя доверието на своите клиенти и се стремя да предложа услуги с най-високо качество, където всеки аспект е важен. Подхождам към всяко превозно средство с отговорност и грижа, като гарантирам, че докато е при мен, то е на сигурно и надеждно място.",
+    "ForMeCommitment":"Убедени можете да бъдете, че във всеки етап на работа, от почистването до най-фините завършващи щрихи, влагам усилия и искреност. Моята цел е не просто да предоставя услуга, а да изградя доверие, базирано на честност и отдаденост.",
+    "ForMeValue":"Детайлингът не само подобрява външния вид на автомобила, но също така допринася за запазването на неговата стойност и дълготрайността му. Чистото и добре поддържано превозно средство е важно не само за комфорта, но и за здравето на своите собственици.",
+    "ForMeQuote":"За мен най-голямата награда е доволният клиент – усмивката му ми показва, че съм постигнал най-важното.",
+    "AboutValuesTitle":"Нашите Ценности",
+    "Value1Title":"Професионализъм",
+    "Value1Description":"Ангажимент към най-високите стандарти в детайлинг индустрията",
+    "Value2Title":"Доверие",
+    "Value2Description":"Ценя доверието на своите клиенти и се стремя да предложа услуги с най-високо качество",
+    "Value3Title":"Съвършенство",
+    "Value3Description":"Подхождам към всяко превозно средство с отговорност и грижа",
+    "AboutDetailedTitle":"Защо избираме качеството",
+    "AboutName":"Айчин Мехмедов",
+    "AboutProfession":"Професионален детайлър",
+    "FooterDescription":"Перфектна чистота и защита за вашия автомобил. Професионални детайлинг услуги в Ловеч.",
+    "FooterContacts":"Контакти",
+    "FooterAddress":"Ловеч 5500, бул. \"Освобождение\" №3",
+    "FooterWorkingHours":"Работно Време",
+    "FooterQuickLinks":"Бързи Връзки",
+    "FooterFollowUs":"Последвайте ни",
+    "FooterCopyright":"© 2024 Aseam Auto Detailing. Всички права запазени.",
+    "FooterCreatedBy":"Изработка от",
     "FirstName":"Име",
     "LastName":"Фамилия",
     "Email":"Email",
@@ -23,5 +46,58 @@
     "Creator":"Изработка от Майкъл Дрошев",
     "SubmissionSuccesful":"Успешно Изпращане",
     "Mandatory": "Задължително",
-    "SendRequest": "Изпратете Запитване"
+    "SendRequest": "Изпратете Запитване",
+    "HeroTitle": "Перфектна чистота и защита",
+    "HeroSubtitle": "защото Вашата кола е специална!",
+    "HeroDescription": "Вашето място - Вашият автомобил!",
+    "AboutTitle": "Защо избираме съвършенството",
+    "AboutDescription": "Независимо дали търсите интериорен или екстериорен детайлинг, ние сме посветени на предоставянето на услуги от най-висок клас, съобразени с нуждите на вашия автомобил. С внимание към всеки детайл, ние гарантираме безупречни резултати, които възвръщат блясъка и придават стойност на вашето превозно средство.",
+    "ExteriorDetailing": "Екстериорен детайлинг",
+    "ExteriorDescription": "Защита и блясък без компромиси! Премахваме драскотини, следи от окисляване и други дефекти, за да възвърнем перфектния външен вид на вашия автомобил.",
+    "InteriorDetailing": "Интериорен детайлинг",
+    "InteriorDescription": "Чистота, защита и комфорт в перфектна хармония! Превърнете интериора на вашия автомобил в оазис на свежест и стил.",
+    "CeramicCoatings": "Керамични покрития",
+    "CeramicDescription": "Дълготрайна защита с керамични покрития за кожен салон и пластмаси – защита от износване, замърсявания и UV лъчи.",
+    "OurAdvantages": "Нашите предимства",
+    "Advantage1": "Прецизно почистване и кондициониране на кожени и текстилни материали",
+    "Advantage2": "Импрегниране и защита на текстилни салони",
+    "Advantage3": "Дезинфекция с озон – премахване на бактерии и алергени",
+    "Advantage4": "Модерно оборудване и професионални продукти",
+    "WhyChooseUs": "Защо нас?",
+    "QualityService": "Висококачествено обслужване",
+    "QualityDescription": "Предлагаме първокласни детайлинг услуги, съобразени с нуждите на вашия автомобил. Нашият екип гарантира внимание към всеки детайл за постигане на изключителни резултати.",
+    "TrustedProfessionals": "Потвърден професионализъм",
+    "TrustSubtitle": "Доверието говори вместо нас",
+    "TrustDescription": "С години усъвършенстване и внимание към детайла. Доверете се на екип, който комбинира опит, прецизност и страст към съвършенството. Вашият автомобил е в сигурни ръце!",
+    "CTATitle": "Готови сте да превърнем вашия автомобил?",
+    "CTADescription": "Свържете се с нас днес за безплатна консултация",
+    "ContactUsNow": "Свържете се сега",
+    "AboutHeroTitle": "За Мен",
+    "AboutHeroSubtitle": "Професионализъм, опит и страст към съвършенството",
+    "ServicesHeroTitle": "Нашите Услуги",
+    "ServicesHeroSubtitle": "Професионални детайлинг услуги с внимание към всеки детайл",
+    "ContactHeroTitle": "Свържете се с нас",
+    "ContactHeroSubtitle": "Готови сме да превърнем вашия автомобил в перфектно състояние",
+    "CallUs": "Обадете ни се",
+    "CallUsNow": "Обадете се сега",
+    "SendEmail": "Изпратете имейл",
+    "SendEmailNow": "Изпратете имейл",
+    "FindUs": "Намерете ни",
+    "OpenInMaps": "Отворете в Google Maps",
+    "BookAppointmentTitle": "Запазете час",
+    "BookAppointmentDescription": "Моля, изпратете заявка за среща и ние ще се свържем с вас възможно най-скоро!",
+    "Save": "Запази",
+    "Service1": "Корекция на лаковото покритие",
+    "Service2": "Керамични покрития",
+    "Service3": "Поддръжка на керамично покритие",
+    "Service4": "One Step",
+    "Service5": "Измиване",
+    "Service6": "Корекция на фарове",
+    "Service7": "Корекция на стопове",
+    "Service8": "Детайлно почистване на интериор",
+    "Service9": "Почистване на стъкла + покритие",
+    "Service10": "Почистване на двигателен отсек",
+    "Service11": "Почистване на джанти",
+    "Service12": "Освежаване на спирачни апарати",
+    "Service13": "Пастиране / Полиране / Почистване на мотори, костюми и предпазни каски"
   }
