--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,11 +7,34 @@
     "Address":"Lovech 5500, “Osvobozhdenie” №3",
     "WorkingDays":"Monday - Friday",
     "WorkingHours":"9:30 to 17:30",
-    "ForMe":"Hello! I am Aychin Mehmedov, a detailer with over 5 years of experience in the industry. I am proud to share that I am officially accredited by the world-renowned brand Gtechniq through its representative for Bulgaria – Kushev Detailing. I have also undergone numerous courses and training sessions by the best in the field over the years. For me, professionalism is not just a word but a commitment that I fulfill down to the last detail.\n\nI value the trust of my clients and strive to offer services of the highest quality, where every aspect is important. I approach each vehicle with responsibility and care, ensuring that while it is with me, it is in a safe and reliable place. You can be assured that in every stage of the process, from cleaning to the finest finishing touches, I put in effort and sincerity. My goal is not only to provide a service but to build trust based on honesty and dedication.\n\nDetailing not only improves the appearance of the car but also contributes to preserving its value and longevity. A clean and well-maintained vehicle is important not only for comfort but also for the health of its owners.\n\nFor me, the greatest reward is a satisfied client – their smile shows me that I have achieved what is most important.",
+    "ForMeIntro":"Hello! I am Aychin Mehmedov, a detailer with over 5 years of experience in the industry. I am proud to share that I am officially accredited by the world-renowned brand Gtechniq through its representative for Bulgaria – Kushev Detailing.",
+    "ForMeExperience":"I have also undergone numerous courses and training sessions by the best in the field over the years. For me, professionalism is not just a word but a commitment that I fulfill down to the last detail.",
+    "ForMeTrust":"I value the trust of my clients and strive to offer services of the highest quality, where every aspect is important. I approach each vehicle with responsibility and care, ensuring that while it is with me, it is in a safe and reliable place.",
+    "ForMeCommitment":"You can be assured that in every stage of the process, from cleaning to the finest finishing touches, I put in effort and sincerity. My goal is not only to provide a service but to build trust based on honesty and dedication.",
+    "ForMeValue":"Detailing not only improves the appearance of the car but also contributes to preserving its value and longevity. A clean and well-maintained vehicle is important not only for comfort but also for the health of its owners.",
+    "ForMeQuote":"For me, the greatest reward is a satisfied client – their smile shows me that I have achieved what is most important.",
+    "AboutValuesTitle":"Our Values",
+    "Value1Title":"Professionalism",
+    "Value1Description":"Commitment to the highest standards in the detailing industry",
+    "Value2Title":"Trust",
+    "Value2Description":"I value the trust of my clients and strive to offer services of the highest quality",
+    "Value3Title":"Excellence",
+    "Value3Description":"I approach each vehicle with responsibility and care",
+    "AboutDetailedTitle":"Why We Choose Quality",
+    "AboutName":"Aychin Mehmedov",
+    "AboutProfession":"Professional Detailer",
+    "FooterDescription":"Perfect cleanliness and protection for your car. Professional detailing services in Lovech.",
+    "FooterContacts":"Contacts",
+    "FooterAddress":"Lovech 5500, \"Osvobozhdenie\" №3",
+    "FooterWorkingHours":"Working Hours",
+    "FooterQuickLinks":"Quick Links",
+    "FooterFollowUs":"Follow Us",
+    "FooterCopyright":"© 2024 Aseam Auto Detailing. All rights reserved.",
+    "FooterCreatedBy":"Created by",
     "FirstName":"First Name",
     "LastName":"Last Name",
     "Email":"Email",
-    "TelephoneNumber":"Telephone Number",
+    "TelephoneNumber":"T. Number",
     "Brand":"Make",
     "Model":"Model",
     "TypeService":"Type of Service",
@@ -23,5 +46,58 @@
     "Creator":"Created by Maykal Droshev",
     "SubmissionSuccesful":"Submission Succesful",
     "Mandatory": "Mandatory",
-    "SendRequest": "Send Request"
+    "SendRequest": "Send Request",
+    "HeroTitle": "Perfect Cleanliness and Protection",
+    "HeroSubtitle": "because Your Car is Special!",
+    "HeroDescription": "Your Place - Your Car!",
+    "AboutTitle": "Why We Choose Perfection",
+    "AboutDescription": "Whether you're looking for interior or exterior detailing, we are committed to providing the highest quality services tailored to your vehicle's needs. With attention to every detail, we guarantee impeccable results that restore shine and add value to your vehicle.",
+    "ExteriorDetailing": "Exterior Detailing",
+    "ExteriorDescription": "Protection and shine without compromise! We remove scratches, oxidation marks and other defects to restore the perfect appearance of your car.",
+    "InteriorDetailing": "Interior Detailing",
+    "InteriorDescription": "Cleanliness, protection and comfort in perfect harmony! Turn your car's interior into an oasis of freshness and style.",
+    "CeramicCoatings": "Ceramic Coatings",
+    "CeramicDescription": "Long-lasting protection with ceramic coatings for leather upholstery and plastics – protection against wear, contamination and UV rays.",
+    "OurAdvantages": "Our Advantages",
+    "Advantage1": "Precise cleaning and conditioning of leather and textile materials",
+    "Advantage2": "Impregnation and protection of textile upholstery",
+    "Advantage3": "Ozone disinfection – removal of bacteria and allergens",
+    "Advantage4": "Modern equipment and professional products",
+    "WhyChooseUs": "Why Choose Us?",
+    "QualityService": "High-Quality Service",
+    "QualityDescription": "We offer first-class detailing services tailored to your vehicle's needs. Our team ensures attention to every detail to achieve exceptional results.",
+    "TrustedProfessionals": "Proven Professionalism",
+    "TrustSubtitle": "Trust Speaks for Us",
+    "TrustDescription": "With years of refinement and attention to detail. Trust a team that combines experience, precision and passion for perfection. Your car is in safe hands!",
+    "CTATitle": "Ready to Transform Your Car?",
+    "CTADescription": "Contact us today for a free consultation",
+    "ContactUsNow": "Contact Us Now",
+    "AboutHeroTitle": "About Me",
+    "AboutHeroSubtitle": "Professionalism, experience and passion for perfection",
+    "ServicesHeroTitle": "Our Services",
+    "ServicesHeroSubtitle": "Professional detailing services with attention to every detail",
+    "ContactHeroTitle": "Contact Us",
+    "ContactHeroSubtitle": "We're ready to transform your car into perfect condition",
+    "CallUs": "Call Us",
+    "CallUsNow": "Call Now",
+    "SendEmail": "Send Email",
+    "SendEmailNow": "Send Email",
+    "FindUs": "Find Us",
+    "OpenInMaps": "Open in Google Maps",
+    "BookAppointmentTitle": "Book Appointment",
+    "BookAppointmentDescription": "Please submit a meeting request and we will get in touch with you as soon as possible!",
+    "Save": "Save",
+    "Service1": "Paint Correction",
+    "Service2": "Ceramic Coatings",
+    "Service3": "Ceramic Coating Maintenance",
+    "Service4": "One Step",
+    "Service5": "Washing",
+    "Service6": "Headlight Correction",
+    "Service7": "Taillight Correction",
+    "Service8": "Detailed Interior Cleaning",
+    "Service9": "Glass Cleaning + Coating",
+    "Service10": "Engine Bay Cleaning",
+    "Service11": "Wheel Cleaning",
+    "Service12": "Brake System Refresh",
+    "Service13": "Pasting / Polishing / Cleaning of Motors, Suits and Safety Helmets"
   }
