--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -43,7 +43,7 @@
     "Send":"Изпрати!",
     "ContactsDescription":"Моля, изпратете заявка за среща и ние ще се свържем с вас възможно най-скоро!",
     "BusinessName":"Асеа-М Детайлинг",
-    "Creator":"Изработка от Майкъл Дрошев",
+    "Creator":"Майкъл Дрошев",
     "SubmissionSuccesful":"Успешно Изпращане",
     "Mandatory": "Задължително",
     "SendRequest": "Изпратете Запитване",
@@ -59,17 +59,15 @@
     "CeramicCoatings": "Керамични покрития",
     "CeramicDescription": "Дълготрайна защита с керамични покрития за кожен салон и пластмаси – защита от износване, замърсявания и UV лъчи.",
     "OurAdvantages": "Нашите предимства",
-    "Advantage1": "Прецизно почистване и кондициониране на кожени и текстилни материали",
-    "Advantage2": "Импрегниране и защита на текстилни салони",
-    "Advantage3": "Дезинфекция с озон – премахване на бактерии и алергени",
-    "Advantage4": "Модерно оборудване и професионални продукти",
+    "Advantage1": "Професионален подход – работим с доказани методи, висококачествени продукти и внимание към всеки детайл.",
+    "Advantage2": "Индивидуално отношение – всяка кола е различна и ние подхождаме според нуждите ѝ, за да извлечем най-добрия резултат.",
+    "Advantage3": "Дълготрайна защита – използваме покрития и техники, които запазват външния вид и интериора за по-дълго.",
+    "Advantage4": "Прозрачност и доверие – клиентът винаги знае какво получава, какви продукти се използват и защо.",
+    "Advantage5": "Страст и отдаденост – за нас детайлингът не е просто работа, а мисия да върнем удоволствието от шофирането.",
     "WhyChooseUs": "Защо нас?",
     "QualityService": "Висококачествено обслужване",
-    "QualityDescription": "Предлагаме първокласни детайлинг услуги, съобразени с нуждите на вашия автомобил. Нашият екип гарантира внимание към всеки детайл за постигане на изключителни резултати.",
     "TrustedProfessionals": "Потвърден професионализъм",
-    "TrustSubtitle": "Доверието говори вместо нас",
-    "TrustDescription": "С години усъвършенстване и внимание към детайла. Доверете се на екип, който комбинира опит, прецизност и страст към съвършенството. Вашият автомобил е в сигурни ръце!",
-    "CTATitle": "Готови сте да превърнем вашия автомобил?",
+    "CTATitle": "Готови ли сте да преобразим вашето превозно средство?",
     "CTADescription": "Свържете се с нас днес за безплатна консултация",
     "ContactUsNow": "Свържете се сега",
     "AboutHeroTitle": "За Мен",
