--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -6,7 +6,7 @@
     "BookAppointment":"Запазете Час",
     "Address":"Ловеч 5500, бул. “Освобождение” №3",
     "WorkingDays":"Понеделник - Петък",
-    "WorkingHours":"9:30 до 17:30",
+    "WorkingHours":"9:30 до 18:00",
     "ForMeIntro":"Здравейте! Аз съм Айчин Мехмедов, детайлър с над 5 години опит в бранша. С гордост мога да споделя, че съм официално акредитиран от световноизвестната марка Gtechniq чрез нейния представител за България – Кушев детайлинг.",
     "ForMeExperience":"Преминал съм и през редица курсове и обучения от най-добрите в бранша през годините. За мен професионализмът не е просто дума, а ангажимент, който изпълнявам до последния детайл.",
     "ForMeTrust":"Ценя доверието на своите клиенти и се стремя да предложа услуги с най-високо качество, където всеки аспект е важен. Подхождам към всяко превозно средство с отговорност и грижа, като гарантирам, че докато е при мен, то е на сигурно и надеждно място.",
@@ -89,13 +89,14 @@
     "Service2": "Керамични покрития",
     "Service3": "Поддръжка на керамично покритие",
     "Service4": "One Step",
-    "Service5": "Измиване",
-    "Service6": "Корекция на фарове",
-    "Service7": "Корекция на стопове",
-    "Service8": "Детайлно почистване на интериор",
-    "Service9": "Почистване на стъкла + покритие",
-    "Service10": "Почистване на двигателен отсек",
-    "Service11": "Почистване на джанти",
-    "Service12": "Освежаване на спирачни апарати",
-    "Service13": "Пастиране / Полиране / Почистване на мотори, костюми и предпазни каски"
+    "Service5": "PPF фолиа и смяна на цвят (НОВО)",
+    "Service6": "Измиване",
+    "Service7": "Корекция на фарове",
+    "Service8": "Корекция на стопове",
+    "Service9": "Детайлно почистване на интериор",
+    "Service10": "Почистване на стъкла + покритие",
+    "Service11": "Почистване на двигателен отсек",
+    "Service12": "Почистване на джанти",
+    "Service13": "Освежаване на спирачни апарати",
+    "Service14": "Пастиране / Полиране / Почистване на мотори, костюми и предпазни каски"
   }
