--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
   "BookAppointment": "Book Appointment",
   "Address": "Lovech 5500, “Osvobozhdenie” №3",
   "WorkingDays": "Monday - Friday",
-  "WorkingHours": "9:30 to 17:30",
+  "WorkingHours": "9:30 to 18:00",
   "ForMeIntro": "Hello! I am Aychin Mehmedov, a detailer with over 5 years of experience in the industry. I am proud to share that I am officially accredited by the world-renowned brand Gtechniq through its representative for Bulgaria – Kushev Detailing.",
   "ForMeExperience": "I have also undergone numerous courses and training sessions by the best in the field over the years. For me, professionalism is not just a word but a commitment that I fulfill down to the last detail.",
   "ForMeTrust": "I value the trust of my clients and strive to offer services of the highest quality, where every aspect is important. I approach each vehicle with responsibility and care, ensuring that while it is with me, it is in a safe and reliable place.",
@@ -89,13 +89,14 @@
   "Service2": "Ceramic Coatings",
   "Service3": "Ceramic Coating Maintenance",
   "Service4": "One Step",
-  "Service5": "Washing",
-  "Service6": "Headlight Correction",
-  "Service7": "Taillight Correction",
-  "Service8": "Detailed Interior Cleaning",
-  "Service9": "Glass Cleaning + Coating",
-  "Service10": "Engine Bay Cleaning",
-  "Service11": "Wheel Cleaning",
-  "Service12": "Brake System Refresh",
-  "Service13": "Pasting / Polishing / Cleaning of Motors, Suits and Safety Helmets"
+  "Service5": "PPF (Paint Protection Film) and colour change (NEW)",
+  "Service6": "Washing",
+  "Service7": "Headlight Correction",
+  "Service8": "Taillight Correction",
+  "Service9": "Detailed Interior Cleaning",
+  "Service10": "Glass Cleaning + Coating",
+  "Service11": "Engine Bay Cleaning",
+  "Service12": "Wheel Cleaning",
+  "Service13": "Brake System Refresh",
+  "Service14": "Pasting / Polishing / Cleaning of Motors, Suits and Safety Helmets"
 }
