Updated to add Reviews

--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -98,5 +98,12 @@
     "Service11": "Почистване на двигателен отсек",
     "Service12": "Почистване на джанти",
     "Service13": "Освежаване на спирачни апарати",
-    "Service14": "Пастиране / Полиране / Почистване на мотори, костюми и предпазни каски"
+    "Service14": "Пастиране / Полиране / Почистване на мотори, костюми и предпазни каски",
+    "Reviews": "Отзиви",
+    "ReviewsHeroTitle": "Google Отзиви",
+    "ReviewsHeroSubtitle": "Вижте какво казват нашите клиенти за нас в Google",
+    "reviews.moreText": "И още много...",
+    "reviews.readMore": "Прочетете повече отзиви",
+    "reviews.leaveReview": "Оставете отзив",
+    "reviews.noReviews": "Не са намерени Google отзиви. Бъдете първият, който ще остави отзив!"
   }
