Added parfumes section

--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -105,5 +105,7 @@
     "reviews.moreText": "И още много...",
     "reviews.readMore": "Прочетете повече отзиви",
     "reviews.leaveReview": "Оставете отзив",
-    "reviews.noReviews": "Не са намерени Google отзиви. Бъдете първият, който ще остави отзив!"
+    "reviews.noReviews": "Не са намерени Google отзиви. Бъдете първият, който ще остави отзив!",
+    "InteriorParfumes": "Интериорни Парфюми",
+    "ParfumesNote": "Забележка: Парфюмите могат да се тестват и закупят само на място"
   }
