--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -105,5 +105,7 @@
   "reviews.moreText": "And many more...",
   "reviews.readMore": "Read More Reviews",
   "reviews.leaveReview": "Leave a Review",
-  "reviews.noReviews": "No Google reviews found. Be the first to leave a review!"
+  "reviews.noReviews": "No Google reviews found. Be the first to leave a review!",
+  "InteriorParfumes": "Interior Parfumes",
+  "ParfumesNote": "Note: Parfumes can only be tested and purchased on-site"
 }
