--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -107,5 +107,25 @@
     "reviews.leaveReview": "Оставете отзив",
     "reviews.noReviews": "Не са намерени Google отзиви. Бъдете първият, който ще остави отзив!",
     "InteriorParfumes": "Интериорни Парфюми",
-    "ParfumesNote": "Забележка: Парфюмите могат да се тестват и закупят само на място"
+    "ParfumesNote": "Забележка: Парфюмите могат да се тестват и закупят само на място.",
+    "ParfumesNote2": "Препоръчва се парфюмът да се използва ежедневно през първите 7 дни.",
+    "ParfumesUsedFor": "За какво се използва:",
+    "ParfumesUsedFor1": "Тапицерия",
+    "ParfumesUsedFor2": "Завеси",
+    "ParfumesUsedFor3": "Мебели",
+    "ParfumesUsedFor4": "Килими",
+    "ParfumesUsedFor5": "Кофи за боклук",
+    "ParfumesUsedFor6": "Филтри на прахосмукачки",
+    "ParfumesGuidanceTitle": "Насоки за употреба:",
+    "ParfumesGuidance": "Използвайте продукта върху повърхността, пръскайки на няколко места в зависимост от размера на стаята. За постигане на дълготраен ефект приложението трябва да се повтаря ежедневно през първата седмица, след което да се прилага веднъж седмично.",
+    "ParfumesVehiclesTitle": "Превозни средства:",
+    "ParfumesVehicles": "Килими, тапицерийни елементи, таванна облицовка",
+    "ParfumesRoomsTitle": "Стаи:",
+    "ParfumesRooms": "Килими, завеси, тъканни щори, мебелна тапицерия, филтри на прахосмукачки",
+    "ParfumesSanitaryTitle": "Санитарни помещения:",
+    "ParfumesSanitary": "Труднодостъпни места, подове, стени, добавяне към почистващи средства",
+    "ParfumesSafetyTitle": "Мерки за безопасност:",
+    "ParfumesSafety1": "Държете далеч от деца, не прилагайте върху кожа или очи",
+    "ParfumesSafety2": "Не прилагайте върху дърво, пластмаса или кожа",
+    "ParfumesSafety3": "За по-добри резултати прилагайте върху текстил и меки повърхности, а не във въздуха"
   }
