--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -107,5 +107,25 @@
   "reviews.leaveReview": "Leave a Review",
   "reviews.noReviews": "No Google reviews found. Be the first to leave a review!",
   "InteriorParfumes": "Interior Parfumes",
-  "ParfumesNote": "Note: Parfumes can only be tested and purchased on-site"
+  "ParfumesNote": "Note: Parfumes can only be tested and purchased on-site",
+  "ParfumesNote2": "It is recommended that the parfume is used daily for the first 7 days.",
+  "ParfumesUsedFor": "What it is used for:",
+  "ParfumesUsedFor1": "Upholstery",
+  "ParfumesUsedFor2": "Curtains",
+  "ParfumesUsedFor3": "Furniture",
+  "ParfumesUsedFor4": "Carpets",
+  "ParfumesUsedFor5": "Bins",
+  "ParfumesUsedFor6": "Vacuum cleaner filters",
+  "ParfumesGuidanceTitle": "Guidance for use:",
+  "ParfumesGuidance": "Use the product on the surface, spraying in several places depending on the size of the room. To obtain a long-lasting effect, the application should be repeated daily for the first week, then apply once a week.",
+  "ParfumesVehiclesTitle": "Vehicles:",
+  "ParfumesVehicles": "Rugs, upholstery elements, headlining",
+  "ParfumesRoomsTitle": "Rooms:",
+  "ParfumesRooms": "Carpets, curtains, fabric blinds, furniture upholstery, vacuum cleaner filters",
+  "ParfumesSanitaryTitle": "Sanitary rooms:",
+  "ParfumesSanitary": "Hard to reach places, floors, walls, add to cleaning agents",
+  "ParfumesSafetyTitle": "Safety:",
+  "ParfumesSafety1": "Keep away from children, do not apply on skin or eyes",
+  "ParfumesSafety2": "Do not apply on wood, plastic or leather",
+  "ParfumesSafety3": "For better results, apply to textiles and soft surfaces, not in the air"
 }
