Add award badge section to homepage and update currency display in services. Enhance styles for award text and badge layout.

--- a/public/locales/bg/common.json
+++ b/public/locales/bg/common.json
@@ -67,6 +67,7 @@
     "WhyChooseUs": "Защо нас?",
     "QualityService": "Висококачествено обслужване",
     "TrustedProfessionals": "Потвърден професионализъм",
+    "AwardText": "Признато качество",
     "CTATitle": "Готови ли сте да преобразим вашето превозно средство?",
     "CTADescription": "Свържете се с нас днес за безплатна консултация",
     "ContactUsNow": "Свържете се сега",
