--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -67,6 +67,7 @@
   "WhyChooseUs": "Why Choose Us?",
   "QualityService": "High-Quality Service",
   "TrustedProfessionals": "Proven Professionalism",
+  "AwardText": "Recognized Excellence",
   "CTATitle": "Ready to Transform Your Car?",
   "CTADescription": "Contact us today for a free consultation",
   "ContactUsNow": "Contact Us Now",
